bsos.output
Terminaux inutilisés dans la grammaire

    COMMENT
    UMOINS


Grammaire

    0 $accept: programme $end

    1 programme: liste_instructions

    2 liste_instructions: liste_instructions SEMI_CO instruction
    3                   | instruction

    4 instruction: ID EQUAL concatenation
    5            | ID OABRA operande_entier CABRA EQUAL concatenation
    6            | DECLARE ID OABRA ENTIER CABRA
    7            | IF test_bloc THEN liste_instructions else_part FI
    8            | FOR ID DO liste_instructions DONE
    9            | FOR ID IN liste_operandes DO liste_instructions DONE
   10            | WHILE test_bloc DO liste_instructions DONE
   11            | UNTIL test_bloc DO liste_instructions DONE
   12            | CASE operande IN liste_cas ESAC
   13            | ECHO_ liste_operandes
   14            | READ ID
   15            | READ ID OABRA operande_entier CABRA
   16            | declaration_de_fonction
   17            | appel_de_fonction
   18            | RETURN
   19            | RETURN operande_entier
   20            | EXIT
   21            | EXIT operande_entier

   22 else_part: ELIF test_bloc THEN liste_instructions else_part
   23          | ELSE liste_instructions
   24          | %empty

   25 liste_cas: liste_cas filtre CPAR liste_instructions SEMI_CO SEMI_CO
   26          | filtre CPAR liste_instructions SEMI_CO SEMI_CO

   27 filtre: MOT
   28       | CHAINE
   29       | filtre CASE_OR MOT
   30       | filtre CASE_OR CHAINE
   31       | STAR

   32 liste_operandes: liste_operandes operande
   33                | operande
   34                | DOLLAR OBRA ID OABRA STAR CABRA CBRA

   35 concatenation: concatenation operande
   36              | operande

   37 test_bloc: TEST test_expr

   38 test_expr: test_expr C_OR test_expr2
   39          | test_expr2

   40 test_expr2: test_expr2 C_AND test_expr3
   41           | test_expr3

   42 test_expr3: OPAR test_expr CPAR
   43           | NOT OPAR test_expr CPAR
   44           | test_instruction
   45           | NOT test_instruction

   46 test_instruction: concatenation EQUAL concatenation
   47                 | concatenation NOT_EQUAL concatenation
   48                 | operateur1 concatenation
   49                 | operande operateur2 operande

   50 operande: DOLLAR OBRA ID CBRA
   51         | DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   52         | MOT
   53         | DOLLAR ENTIER
   54         | DOLLAR STAR
   55         | DOLLAR STATUS
   56         | CHAINE
   57         | DOLLAR OPAR EXPR somme_entiere CPAR
   58         | DOLLAR OPAR appel_de_fonction CPAR

   59 operateur1: T_NOT_EMPTY
   60           | T_EMPTY

   61 operateur2: T_EQUAL
   62           | T_NOT_EQUAL
   63           | T_GT
   64           | T_GE
   65           | T_LT
   66           | T_LE

   67 somme_entiere: somme_entiere plus_ou_moins produit_entier
   68              | produit_entier

   69 produit_entier: produit_entier fois_div_mod operande_entier
   70               | operande_entier

   71 operande_entier: DOLLAR OBRA ID CBRA
   72                | DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   73                | DOLLAR ENTIER
   74                | plus_ou_moins DOLLAR OBRA ID CBRA
   75                | plus_ou_moins DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   76                | plus_ou_moins DOLLAR ENTIER
   77                | ENTIER
   78                | plus_ou_moins ENTIER
   79                | OPAR somme_entiere CPAR

   80 plus_ou_moins: PLUS
   81              | MOINS

   82 fois_div_mod: STAR
   83             | DIVISION
   84             | MOD

   85 declaration_de_fonction: ID OPAR CPAR OBRA decl_loc liste_instructions CBRA

   86 decl_loc: decl_loc LOCAL ID EQUAL concatenation SEMI_CO
   87         | %empty

   88 appel_de_fonction: ID liste_operandes
   89                  | ID


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    TEST (258) 37
    EXPR (259) 57
    LOCAL (260) 86
    DECLARE (261) 6
    IF (262) 7
    THEN (263) 7 22
    ELIF (264) 22
    ELSE (265) 23
    FI (266) 7
    FOR (267) 8 9
    WHILE (268) 10
    UNTIL (269) 11
    CASE (270) 12
    ESAC (271) 12
    IN (272) 9 12
    DO (273) 8 9 10 11
    DONE (274) 8 9 10 11
    READ (275) 14 15
    ECHO_ (276) 13
    RETURN (277) 18 19
    EXIT (278) 20 21
    COMMENT (279)
    ID (280) 4 5 6 8 9 14 15 34 50 51 71 72 74 75 85 86 88 89
    MOT (281) 27 29 52
    CHAINE (282) 28 30 56
    ENTIER (283) 6 53 73 76 77 78
    PLUS (284) 80
    MOINS (285) 81
    STAR (286) 31 34 54 82
    DIVISION (287) 83
    EQUAL (288) 4 5 46 86
    NOT_EQUAL (289) 47
    NOT (290) 43 45
    MOD (291) 84
    CASE_OR (292) 29 30
    SEMI_CO (293) 2 25 26 86
    OPAR (294) 42 43 57 58 79 85
    CPAR (295) 25 26 42 43 57 58 79 85
    OBRA (296) 34 50 51 71 72 74 75 85
    CBRA (297) 34 50 51 71 72 74 75 85
    OABRA (298) 5 6 15 34 51 72 75
    CABRA (299) 5 6 15 34 51 72 75
    DOLLAR (300) 34 50 51 53 54 55 57 58 71 72 73 74 75 76
    STATUS (301) 55
    T_NOT_EMPTY (302) 59
    T_EMPTY (303) 60
    T_EQUAL (304) 61
    T_NOT_EQUAL (305) 62
    T_GT (306) 63
    T_GE (307) 64
    T_LT (308) 65
    T_LE (309) 66
    C_AND (310) 40
    C_OR (311) 38
    UMOINS (312)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (58)
        à gauche: 0
    programme (59)
        à gauche: 1
        à droite: 0
    liste_instructions (60)
        à gauche: 2 3
        à droite: 1 2 7 8 9 10 11 22 23 25 26 85
    instruction (61)
        à gauche: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        à droite: 2 3
    else_part (62)
        à gauche: 22 23 24
        à droite: 7 22
    liste_cas (63)
        à gauche: 25 26
        à droite: 12 25
    filtre (64)
        à gauche: 27 28 29 30 31
        à droite: 25 26 29 30
    liste_operandes (65)
        à gauche: 32 33 34
        à droite: 9 13 32 88
    concatenation (66)
        à gauche: 35 36
        à droite: 4 5 35 46 47 48 86
    test_bloc (67)
        à gauche: 37
        à droite: 7 10 11 22
    test_expr (68)
        à gauche: 38 39
        à droite: 37 38 42 43
    test_expr2 (69)
        à gauche: 40 41
        à droite: 38 39 40
    test_expr3 (70)
        à gauche: 42 43 44 45
        à droite: 40 41
    test_instruction (71)
        à gauche: 46 47 48 49
        à droite: 44 45
    operande (72)
        à gauche: 50 51 52 53 54 55 56 57 58
        à droite: 12 32 33 35 36 49
    operateur1 (73)
        à gauche: 59 60
        à droite: 48
    operateur2 (74)
        à gauche: 61 62 63 64 65 66
        à droite: 49
    somme_entiere (75)
        à gauche: 67 68
        à droite: 57 67 79
    produit_entier (76)
        à gauche: 69 70
        à droite: 67 68 69
    operande_entier (77)
        à gauche: 71 72 73 74 75 76 77 78 79
        à droite: 5 15 19 21 51 69 70 72 75
    plus_ou_moins (78)
        à gauche: 80 81
        à droite: 67 74 75 76 78
    fois_div_mod (79)
        à gauche: 82 83 84
        à droite: 69
    declaration_de_fonction (80)
        à gauche: 85
        à droite: 16
    decl_loc (81)
        à gauche: 86 87
        à droite: 85 86
    appel_de_fonction (82)
        à gauche: 88 89
        à droite: 17 58


État 0

    0 $accept: . programme $end
    1 programme: . liste_instructions
    2 liste_instructions: . liste_instructions SEMI_CO instruction
    3                   | . instruction
    4 instruction: . ID EQUAL concatenation
    5            | . ID OABRA operande_entier CABRA EQUAL concatenation
    6            | . DECLARE ID OABRA ENTIER CABRA
    7            | . IF test_bloc THEN liste_instructions else_part FI
    8            | . FOR ID DO liste_instructions DONE
    9            | . FOR ID IN liste_operandes DO liste_instructions DONE
   10            | . WHILE test_bloc DO liste_instructions DONE
   11            | . UNTIL test_bloc DO liste_instructions DONE
   12            | . CASE operande IN liste_cas ESAC
   13            | . ECHO_ liste_operandes
   14            | . READ ID
   15            | . READ ID OABRA operande_entier CABRA
   16            | . declaration_de_fonction
   17            | . appel_de_fonction
   18            | . RETURN
   19            | . RETURN operande_entier
   20            | . EXIT
   21            | . EXIT operande_entier
   85 declaration_de_fonction: . ID OPAR CPAR OBRA decl_loc liste_instructions CBRA
   88 appel_de_fonction: . ID liste_operandes
   89                  | . ID

    DECLARE  décalage et aller à l'état 1
    IF       décalage et aller à l'état 2
    FOR      décalage et aller à l'état 3
    WHILE    décalage et aller à l'état 4
    UNTIL    décalage et aller à l'état 5
    CASE     décalage et aller à l'état 6
    READ     décalage et aller à l'état 7
    ECHO_    décalage et aller à l'état 8
    RETURN   décalage et aller à l'état 9
    EXIT     décalage et aller à l'état 10
    ID       décalage et aller à l'état 11

    programme                aller à l'état 12
    liste_instructions       aller à l'état 13
    instruction              aller à l'état 14
    declaration_de_fonction  aller à l'état 15
    appel_de_fonction        aller à l'état 16


État 1

    6 instruction: DECLARE . ID OABRA ENTIER CABRA

    ID  décalage et aller à l'état 17


État 2

    7 instruction: IF . test_bloc THEN liste_instructions else_part FI
   37 test_bloc: . TEST test_expr

    TEST  décalage et aller à l'état 18

    test_bloc  aller à l'état 19


État 3

    8 instruction: FOR . ID DO liste_instructions DONE
    9            | FOR . ID IN liste_operandes DO liste_instructions DONE

    ID  décalage et aller à l'état 20


État 4

   10 instruction: WHILE . test_bloc DO liste_instructions DONE
   37 test_bloc: . TEST test_expr

    TEST  décalage et aller à l'état 18

    test_bloc  aller à l'état 21


État 5

   11 instruction: UNTIL . test_bloc DO liste_instructions DONE
   37 test_bloc: . TEST test_expr

    TEST  décalage et aller à l'état 18

    test_bloc  aller à l'état 22


État 6

   12 instruction: CASE . operande IN liste_cas ESAC
   50 operande: . DOLLAR OBRA ID CBRA
   51         | . DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   52         | . MOT
   53         | . DOLLAR ENTIER
   54         | . DOLLAR STAR
   55         | . DOLLAR STATUS
   56         | . CHAINE
   57         | . DOLLAR OPAR EXPR somme_entiere CPAR
   58         | . DOLLAR OPAR appel_de_fonction CPAR

    MOT     décalage et aller à l'état 23
    CHAINE  décalage et aller à l'état 24
    DOLLAR  décalage et aller à l'état 25

    operande  aller à l'état 26


État 7

   14 instruction: READ . ID
   15            | READ . ID OABRA operande_entier CABRA

    ID  décalage et aller à l'état 27


État 8

   13 instruction: ECHO_ . liste_operandes
   32 liste_operandes: . liste_operandes operande
   33                | . operande
   34                | . DOLLAR OBRA ID OABRA STAR CABRA CBRA
   50 operande: . DOLLAR OBRA ID CBRA
   51         | . DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   52         | . MOT
   53         | . DOLLAR ENTIER
   54         | . DOLLAR STAR
   55         | . DOLLAR STATUS
   56         | . CHAINE
   57         | . DOLLAR OPAR EXPR somme_entiere CPAR
   58         | . DOLLAR OPAR appel_de_fonction CPAR

    MOT     décalage et aller à l'état 23
    CHAINE  décalage et aller à l'état 24
    DOLLAR  décalage et aller à l'état 28

    liste_operandes  aller à l'état 29
    operande         aller à l'état 30


État 9

   18 instruction: RETURN .  [$end, ELIF, ELSE, FI, DONE, SEMI_CO, CBRA]
   19            | RETURN . operande_entier
   71 operande_entier: . DOLLAR OBRA ID CBRA
   72                | . DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   73                | . DOLLAR ENTIER
   74                | . plus_ou_moins DOLLAR OBRA ID CBRA
   75                | . plus_ou_moins DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   76                | . plus_ou_moins DOLLAR ENTIER
   77                | . ENTIER
   78                | . plus_ou_moins ENTIER
   79                | . OPAR somme_entiere CPAR
   80 plus_ou_moins: . PLUS
   81              | . MOINS

    ENTIER  décalage et aller à l'état 31
    PLUS    décalage et aller à l'état 32
    MOINS   décalage et aller à l'état 33
    OPAR    décalage et aller à l'état 34
    DOLLAR  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 18 (instruction)

    operande_entier  aller à l'état 36
    plus_ou_moins    aller à l'état 37


État 10

   20 instruction: EXIT .  [$end, ELIF, ELSE, FI, DONE, SEMI_CO, CBRA]
   21            | EXIT . operande_entier
   71 operande_entier: . DOLLAR OBRA ID CBRA
   72                | . DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   73                | . DOLLAR ENTIER
   74                | . plus_ou_moins DOLLAR OBRA ID CBRA
   75                | . plus_ou_moins DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   76                | . plus_ou_moins DOLLAR ENTIER
   77                | . ENTIER
   78                | . plus_ou_moins ENTIER
   79                | . OPAR somme_entiere CPAR
   80 plus_ou_moins: . PLUS
   81              | . MOINS

    ENTIER  décalage et aller à l'état 31
    PLUS    décalage et aller à l'état 32
    MOINS   décalage et aller à l'état 33
    OPAR    décalage et aller à l'état 34
    DOLLAR  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 20 (instruction)

    operande_entier  aller à l'état 38
    plus_ou_moins    aller à l'état 37


État 11

    4 instruction: ID . EQUAL concatenation
    5            | ID . OABRA operande_entier CABRA EQUAL concatenation
   32 liste_operandes: . liste_operandes operande
   33                | . operande
   34                | . DOLLAR OBRA ID OABRA STAR CABRA CBRA
   50 operande: . DOLLAR OBRA ID CBRA
   51         | . DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   52         | . MOT
   53         | . DOLLAR ENTIER
   54         | . DOLLAR STAR
   55         | . DOLLAR STATUS
   56         | . CHAINE
   57         | . DOLLAR OPAR EXPR somme_entiere CPAR
   58         | . DOLLAR OPAR appel_de_fonction CPAR
   85 declaration_de_fonction: ID . OPAR CPAR OBRA decl_loc liste_instructions CBRA
   88 appel_de_fonction: ID . liste_operandes
   89                  | ID .  [$end, ELIF, ELSE, FI, DONE, SEMI_CO, CBRA]

    MOT     décalage et aller à l'état 23
    CHAINE  décalage et aller à l'état 24
    EQUAL   décalage et aller à l'état 39
    OPAR    décalage et aller à l'état 40
    OABRA   décalage et aller à l'état 41
    DOLLAR  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 89 (appel_de_fonction)

    liste_operandes  aller à l'état 42
    operande         aller à l'état 30


État 12

    0 $accept: programme . $end

    $end  décalage et aller à l'état 43


État 13

    1 programme: liste_instructions .  [$end]
    2 liste_instructions: liste_instructions . SEMI_CO instruction

    SEMI_CO  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 1 (programme)


État 14

    3 liste_instructions: instruction .

    $défaut  réduction par utilisation de la règle 3 (liste_instructions)


État 15

   16 instruction: declaration_de_fonction .

    $défaut  réduction par utilisation de la règle 16 (instruction)


État 16

   17 instruction: appel_de_fonction .

    $défaut  réduction par utilisation de la règle 17 (instruction)


État 17

    6 instruction: DECLARE ID . OABRA ENTIER CABRA

    OABRA  décalage et aller à l'état 45


État 18

   35 concatenation: . concatenation operande
   36              | . operande
   37 test_bloc: TEST . test_expr
   38 test_expr: . test_expr C_OR test_expr2
   39          | . test_expr2
   40 test_expr2: . test_expr2 C_AND test_expr3
   41           | . test_expr3
   42 test_expr3: . OPAR test_expr CPAR
   43           | . NOT OPAR test_expr CPAR
   44           | . test_instruction
   45           | . NOT test_instruction
   46 test_instruction: . concatenation EQUAL concatenation
   47                 | . concatenation NOT_EQUAL concatenation
   48                 | . operateur1 concatenation
   49                 | . operande operateur2 operande
   50 operande: . DOLLAR OBRA ID CBRA
   51         | . DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   52         | . MOT
   53         | . DOLLAR ENTIER
   54         | . DOLLAR STAR
   55         | . DOLLAR STATUS
   56         | . CHAINE
   57         | . DOLLAR OPAR EXPR somme_entiere CPAR
   58         | . DOLLAR OPAR appel_de_fonction CPAR
   59 operateur1: . T_NOT_EMPTY
   60           | . T_EMPTY

    MOT          décalage et aller à l'état 23
    CHAINE       décalage et aller à l'état 24
    NOT          décalage et aller à l'état 46
    OPAR         décalage et aller à l'état 47
    DOLLAR       décalage et aller à l'état 25
    T_NOT_EMPTY  décalage et aller à l'état 48
    T_EMPTY      décalage et aller à l'état 49

    concatenation     aller à l'état 50
    test_expr         aller à l'état 51
    test_expr2        aller à l'état 52
    test_expr3        aller à l'état 53
    test_instruction  aller à l'état 54
    operande          aller à l'état 55
    operateur1        aller à l'état 56


État 19

    7 instruction: IF test_bloc . THEN liste_instructions else_part FI

    THEN  décalage et aller à l'état 57


État 20

    8 instruction: FOR ID . DO liste_instructions DONE
    9            | FOR ID . IN liste_operandes DO liste_instructions DONE

    IN  décalage et aller à l'état 58
    DO  décalage et aller à l'état 59


État 21

   10 instruction: WHILE test_bloc . DO liste_instructions DONE

    DO  décalage et aller à l'état 60


État 22

   11 instruction: UNTIL test_bloc . DO liste_instructions DONE

    DO  décalage et aller à l'état 61


État 23

   52 operande: MOT .

    $défaut  réduction par utilisation de la règle 52 (operande)


État 24

   56 operande: CHAINE .

    $défaut  réduction par utilisation de la règle 56 (operande)


État 25

   50 operande: DOLLAR . OBRA ID CBRA
   51         | DOLLAR . OBRA ID OABRA operande_entier CABRA CBRA
   53         | DOLLAR . ENTIER
   54         | DOLLAR . STAR
   55         | DOLLAR . STATUS
   57         | DOLLAR . OPAR EXPR somme_entiere CPAR
   58         | DOLLAR . OPAR appel_de_fonction CPAR

    ENTIER  décalage et aller à l'état 62
    STAR    décalage et aller à l'état 63
    OPAR    décalage et aller à l'état 64
    OBRA    décalage et aller à l'état 65
    STATUS  décalage et aller à l'état 66


État 26

   12 instruction: CASE operande . IN liste_cas ESAC

    IN  décalage et aller à l'état 67


État 27

   14 instruction: READ ID .  [$end, ELIF, ELSE, FI, DONE, SEMI_CO, CBRA]
   15            | READ ID . OABRA operande_entier CABRA

    OABRA  décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 14 (instruction)


État 28

   34 liste_operandes: DOLLAR . OBRA ID OABRA STAR CABRA CBRA
   50 operande: DOLLAR . OBRA ID CBRA
   51         | DOLLAR . OBRA ID OABRA operande_entier CABRA CBRA
   53         | DOLLAR . ENTIER
   54         | DOLLAR . STAR
   55         | DOLLAR . STATUS
   57         | DOLLAR . OPAR EXPR somme_entiere CPAR
   58         | DOLLAR . OPAR appel_de_fonction CPAR

    ENTIER  décalage et aller à l'état 62
    STAR    décalage et aller à l'état 63
    OPAR    décalage et aller à l'état 64
    OBRA    décalage et aller à l'état 69
    STATUS  décalage et aller à l'état 66


État 29

   13 instruction: ECHO_ liste_operandes .  [$end, ELIF, ELSE, FI, DONE, SEMI_CO, CBRA]
   32 liste_operandes: liste_operandes . operande
   50 operande: . DOLLAR OBRA ID CBRA
   51         | . DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   52         | . MOT
   53         | . DOLLAR ENTIER
   54         | . DOLLAR STAR
   55         | . DOLLAR STATUS
   56         | . CHAINE
   57         | . DOLLAR OPAR EXPR somme_entiere CPAR
   58         | . DOLLAR OPAR appel_de_fonction CPAR

    MOT     décalage et aller à l'état 23
    CHAINE  décalage et aller à l'état 24
    DOLLAR  décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 13 (instruction)

    operande  aller à l'état 70


État 30

   33 liste_operandes: operande .

    $défaut  réduction par utilisation de la règle 33 (liste_operandes)


État 31

   77 operande_entier: ENTIER .

    $défaut  réduction par utilisation de la règle 77 (operande_entier)


État 32

   80 plus_ou_moins: PLUS .

    $défaut  réduction par utilisation de la règle 80 (plus_ou_moins)


État 33

   81 plus_ou_moins: MOINS .

    $défaut  réduction par utilisation de la règle 81 (plus_ou_moins)


État 34

   67 somme_entiere: . somme_entiere plus_ou_moins produit_entier
   68              | . produit_entier
   69 produit_entier: . produit_entier fois_div_mod operande_entier
   70               | . operande_entier
   71 operande_entier: . DOLLAR OBRA ID CBRA
   72                | . DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   73                | . DOLLAR ENTIER
   74                | . plus_ou_moins DOLLAR OBRA ID CBRA
   75                | . plus_ou_moins DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   76                | . plus_ou_moins DOLLAR ENTIER
   77                | . ENTIER
   78                | . plus_ou_moins ENTIER
   79                | . OPAR somme_entiere CPAR
   79                | OPAR . somme_entiere CPAR
   80 plus_ou_moins: . PLUS
   81              | . MOINS

    ENTIER  décalage et aller à l'état 31
    PLUS    décalage et aller à l'état 32
    MOINS   décalage et aller à l'état 33
    OPAR    décalage et aller à l'état 34
    DOLLAR  décalage et aller à l'état 35

    somme_entiere    aller à l'état 71
    produit_entier   aller à l'état 72
    operande_entier  aller à l'état 73
    plus_ou_moins    aller à l'état 37


État 35

   71 operande_entier: DOLLAR . OBRA ID CBRA
   72                | DOLLAR . OBRA ID OABRA operande_entier CABRA CBRA
   73                | DOLLAR . ENTIER

    ENTIER  décalage et aller à l'état 74
    OBRA    décalage et aller à l'état 75


État 36

   19 instruction: RETURN operande_entier .

    $défaut  réduction par utilisation de la règle 19 (instruction)


État 37

   74 operande_entier: plus_ou_moins . DOLLAR OBRA ID CBRA
   75                | plus_ou_moins . DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   76                | plus_ou_moins . DOLLAR ENTIER
   78                | plus_ou_moins . ENTIER

    ENTIER  décalage et aller à l'état 76
    DOLLAR  décalage et aller à l'état 77


État 38

   21 instruction: EXIT operande_entier .

    $défaut  réduction par utilisation de la règle 21 (instruction)


État 39

    4 instruction: ID EQUAL . concatenation
   35 concatenation: . concatenation operande
   36              | . operande
   50 operande: . DOLLAR OBRA ID CBRA
   51         | . DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   52         | . MOT
   53         | . DOLLAR ENTIER
   54         | . DOLLAR STAR
   55         | . DOLLAR STATUS
   56         | . CHAINE
   57         | . DOLLAR OPAR EXPR somme_entiere CPAR
   58         | . DOLLAR OPAR appel_de_fonction CPAR

    MOT     décalage et aller à l'état 23
    CHAINE  décalage et aller à l'état 24
    DOLLAR  décalage et aller à l'état 25

    concatenation  aller à l'état 78
    operande       aller à l'état 79


État 40

   85 declaration_de_fonction: ID OPAR . CPAR OBRA decl_loc liste_instructions CBRA

    CPAR  décalage et aller à l'état 80


État 41

    5 instruction: ID OABRA . operande_entier CABRA EQUAL concatenation
   71 operande_entier: . DOLLAR OBRA ID CBRA
   72                | . DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   73                | . DOLLAR ENTIER
   74                | . plus_ou_moins DOLLAR OBRA ID CBRA
   75                | . plus_ou_moins DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   76                | . plus_ou_moins DOLLAR ENTIER
   77                | . ENTIER
   78                | . plus_ou_moins ENTIER
   79                | . OPAR somme_entiere CPAR
   80 plus_ou_moins: . PLUS
   81              | . MOINS

    ENTIER  décalage et aller à l'état 31
    PLUS    décalage et aller à l'état 32
    MOINS   décalage et aller à l'état 33
    OPAR    décalage et aller à l'état 34
    DOLLAR  décalage et aller à l'état 35

    operande_entier  aller à l'état 81
    plus_ou_moins    aller à l'état 37


État 42

   32 liste_operandes: liste_operandes . operande
   50 operande: . DOLLAR OBRA ID CBRA
   51         | . DOLLAR OBRA ID OABRA operande_entier CABRA CBRA
   52         | . MOT
   53         | . DOLLAR ENTIER
   54         | . DOLLAR STAR
   55         | . DOLLAR STATUS
   56         | . CHAINE
   57         | . DOLLAR OPAR EXPR somme_entiere CPAR
   58         | . DOLLAR OPAR appel_de_fonction CPAR
   88 appel_de_fonction: ID liste_operandes .  [$end, ELIF, ELSE, FI, DONE, SEMI_CO, CPAR, CBRA]

    MOT     décalage et aller à l'état 23
    CHAINE  décalage et aller à l'état 24
    DOLLAR  décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 88 (appel_de_fonction)

    operande  aller à l'état 70


État 43

    0 $accept: programme $end .

    $défaut  accepter


État 44

    2 liste_instructions: liste_instructions SEMI_CO . instruction
    4 instruction: . ID EQUAL concatenation
    5            | . ID OABRA operande_entier CABRA EQUAL concatenation
    6            | . DECLARE ID OABRA ENTIER CABRA
    7            | . IF test_bloc THEN liste_instructions else_part FI
    8            | . FOR ID DO liste_instructions DONE
    9            | . FOR ID IN liste_operandes DO liste_instructions DONE
   10            | . WHILE test_bloc DO liste_instructions DONE
   11            | . UNTIL test_bloc DO liste_instructions DONE
   12            | . CASE operande IN liste_cas ESAC
   13            | . ECHO_ liste_operandes
   14            | . READ ID
   15            | . READ ID OABRA operande_entier CABRA
   16            | . declaration_de_fonction
   17            | . appel_de_fonction
   18            | . RETURN
   19            | . RETURN operande_entier
   20            | . EXIT
   21            | . EXIT operande_entier
   85 declaration_de_fonction: . ID OPAR CPAR OBRA decl_loc liste_instructions CBRA
   88 appel_de_fonction: . ID liste_operandes
   89                  | . ID

    DECLARE  décalage et aller à l'état 1
    IF       décalage et aller à l'état 2
    FOR      décalage et aller à l'état 3
    WHILE    décalage et aller à l'état 4
    UNTIL    décalage et aller à l'état 5
    CASE     décalage et aller à l'état 6
    READ     décalage et aller à l'état 7
    ECHO_    décalage et aller à l'état 8
    RETURN   décalage et aller à l'état 9
    EXIT     décalage et aller à l'état 10
    ID       décalage et aller à l'état 11

    instruction              aller à l'état 82
    declaration_de_fonction  aller à l'état 15
    appel_de_fonction        aller à l'état 16


État 45

    6 instruction: DECLARE ID OABRA . ENTIER CABRA

    ENTIER  décalage et aller à l'état 83


État 46
